--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div id="containerMap">
+    <div id="weathermap">
       <div id="map"></div>
     </div>
     <script src="./js/app.js"></script>
